--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>La Casa del Gelat</title>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="header-img-div">
-            <img id="header-img" src="/assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
+            <img id="header-img" src="assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
             <div class="container-fluid">
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="col-4">
-            <img  id="all-ice-creams-img" src="../assets/images/all-ice-creams.png" alt="Ice creams">
+            <img  id="all-ice-creams-img" src="assets/images/all-ice-creams.png" alt="Ice creams">
         </div>
         <div class="col-4">
             <div class="mx-5">
