--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul id="menu" class="navbar-nav">
                   <li class="nav-item px-3">
-                    <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="#">Productes</a>
+                    <a class="nav-link text-light" href="gelats.html">Productes</a>
                   </li>
                   <li class="nav-item px-3">
                     <a class="nav-link text-light" href="#">Qui som?</a>
@@ -43,63 +43,26 @@
             </div>
           </nav>
     </header>
-    <div>
-    <h1 class="mt-3 mx-5">GELATS I SORBETS</h1>
-    <div class="row">
-    <div class="col-8">
-        <h6 class="mx-5"><strong>Són productes elaborats a l’obrador del propi local i és el mateix personal l’encarregat 
-            d’aprovisionar-se dels ingredients necessaris per tenir sempre estoc fresc per fabricar els gelats i sorbets 
-            que ells mateixos produiran.</strong></h6>
-    </div>
-    </div>
-    </div>
-    <hr>
 
 
-    <div class="row text-center mt-4">
-        <div class="col-4">
-            <div class="mx-5">
-            <h2>Gelats</h2>
-            <p>Per l’elaboració dels gelats, la base de la recepta és la llet ecològica. A partir d’aquí, s’incorpora 
-                la proporció exacte de la resta d’ingredients per obtenir els gelats que es poden veure a la vitrina. 
-                Es compta amb els gelats imprescindibles, com la vainilla o la xocolata, però també amb innovacions com 
-                l’avellana amb xocolata blanca i coco; o productes inspirats amb productes d’Olot, com el de Ratafia i 
-                cafè.</p>
-                <hr>
-            <h2>Presentació</h2>
-            <p>La gamma que s’ofereix de gelats i sorbets es pot combinar amb la presentació final que es desitgi. Si es 
-                vol prendre al moment, es pot escollir entre un con (petit, gran, de crocant de xocolata o sense gluten) 
-                o un terrina (petita, mitjana o gran).</p>
-            </div>
-        </div>
-        <div class="col-4">
-            <img  id="all-ice-creams-img" src="assets/images/all-ice-creams.png" alt="Ice creams">
-        </div>
-        <div class="col-4">
-            <div class="mx-5">
-            <h2>Sorbets</h2>
-            <p>Per a fer els sorbets s’utilitzen fruites fresques del dia i comprades a Olot. Els tipus de sorbets que 
-                s’ofereixen varien en funció de l’època de l’any, buscant sempre poder utilitzar la fruita de la temporada, 
-                ja que és el component principal (representa entre el 40 i 50% del sorbet), seguit de l’aigua. Els sorbets, 
-                a diferència dels gelats, són elaborats sense llet i, per tant, són lliures d’al·lèrgens.</p>
-                <hr>
-                <h2>Per a restaurants o tercers</h2>
-                <p>Des de La Casa del Gelat s’ofereix la opció de produir i fer arribar als restaurants els gelats o 
-                    sorbets que desitgin incloure a la seva carta. Si no trobeu el gust que esteu buscant, no dubteu en 
-                    contactar amb l’equip, que estarà encantat de produir un producte especial per a vosaltres!</p>
-                </div>
+    <div class="container-fluid" id="home-body">
+        <div class="text-center" id="home-headers">
+            <h1 id="home-h1">La Casa del Gelat</h1>
+            <h2 id="home-h2">Great Taste in One Bite</h2>
         </div>
     </div>
-</div>
-<footer class="row bg-dark text-white">
-    <div class="col-4">
-        <p class="ml-3"> Compra Aquí!</p>
+    
+    
+    <footer>
+        <div class="row bg-dark text-white" id="footer-div">
+        <div class="col-4">
+            <p class="ml-3"> Compra Aquí!</p>
+        </div>
+        <div class="col-4 text-center">La Casa del Gelat</div>
+        <div class="col-4">
+            <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+        </div>
     </div>
-    <div class="col-4 text-center">La Casa del Gelat</div>
-    <div class="col-4">
-        <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-    </div>
-</footer>
-<script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
-</body>
-</html>
+    </footer>
+    <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
+    </body>
