--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id="header-img-div">
+        <div id="header-img-div xs-h-25">
             <img id="header-img" src="assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
@@ -49,6 +49,7 @@
         <div class="text-center" id="home-headers">
             <h1 id="home-h1">La Casa del Gelat</h1>
             <h2 id="home-h2">Great Taste in One Bite</h2>
+            <a href="gelats.html" class="bg-light text-dark p-2 w-25 mx-auto"><strong>Entra a veure què oferim!</strong></a>
         </div>
     </div>
     
