Add qui som section to home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id="header-img-div xs-h-25">
+        <div id="header-img-div">
             <img id="header-img" src="assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
@@ -52,10 +52,28 @@
             <a href="gelats.html" class="bg-light text-dark p-2 w-25 mx-auto"><strong>Entra a veure què oferim!</strong></a>
         </div>
     </div>
+
+    <div class="row">
+      <div class="col-6">
+        <img id="qui-som-img" src="assets/images/qui-som-img.png" alt="" class="m-5">
+      </div>
+      <div class="col-6">
+        <div class="m-5">
+        <h3>Qui som?</h3>
+        <p>La Casa del Gelat neix a Olot, el Juliol del 2021, amb la idea de crear una petita gelateria 
+          artesana, on els gelats siguin el producte principal de la carta durant tot l’any. A l’estiu, majoritàriament 
+          servits amb terrines i cons i, a l’hivern, combinats amb productes calents com crepes, xocolata desfeta, etc. 
+          Tots els productes que s’ofereixen estan pensats tant per emportar com per prendre aquí: es compta amb una barra 
+          degustació a dins i fora del local i amb una terrassa per si es prefereix sentir l’ambient del Firal de més a prop, 
+          envoltats dels clàssics plataners d’Olot.</p>
+          <a href="#" class="bg-primary p-2 text-light">Més informació</a>
+        </div>
+    </div>
+    </div>
     
     
     <footer>
-        <div class="row bg-dark text-white" id="footer-div">
+        <div class="row bg-dark text-white lg-h1" id="footer-div">
         <div class="col-4">
             <p class="ml-3"> Compra Aquí!</p>
         </div>
