--- a/index.html
+++ b/index.html
@@ -1,87 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>La Casa del Gelat</title>
+  <title>La Casa del Gelat</title>
 </head>
 
 <body>
-    <header>
-        <div id="header-img-div">
-            <img id="header-img" src="assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
-        </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul id="menu" class="navbar-nav">
-                  <li class="nav-item px-3">
-                    <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="gelats.html">Productes</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="#">Qui som?</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="#">Contacte</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="#">Receptes</a>
-                  </li>
-                  <li class="nav-item px-3">
-                    <a class="nav-link text-light" href="#">Compra!</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-
-
-    <div class="container-fluid" id="home-body">
-        <div class="text-center" id="home-headers">
-            <h1 id="home-h1">La Casa del Gelat</h1>
-            <h2 id="home-h2">Great Taste in One Bite</h2>
-            <a href="gelats.html" class="bg-light text-dark p-2 w-25 mx-auto"><strong>Entra a veure què oferim!</strong></a>
-        </div>
+  <header>
+    <div id="header-img-div">
+      <img id="header-img" src="assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
     </div>
-
-    <div class="row">
-      <div class="col-6">
-        <img id="qui-som-img" src="assets/images/qui-som-img.png" alt="" class="m-5">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul id="menu" class="navbar-nav">
+            <li class="nav-item px-3">
+              <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link text-light" href="gelats.html">Productes</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link text-light" href="#">Qui som?</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link text-light" href="#">Contacte</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link text-light" href="#">Receptes</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link text-light" href="#">Compra!</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="col-6">
-        <div class="m-5">
+    </nav>
+  </header>
+
+
+  <div class="container-fluid" id="home-body">
+    <div class="text-center" id="home-headers">
+      <h1 id="home-h1">La Casa del Gelat</h1>
+      <h2 id="home-h2">Great Taste in One Bite</h2>
+      <a href="gelats.html" class="bg-light text-dark p-2 w-25 mx-auto"><strong>Entra a veure què oferim!</strong></a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6">
+      <img id="qui-som-img" src="assets/images/qui-som-img.png" alt="" class="m-5">
+    </div>
+    <div class="col-6">
+      <div class="m-5">
         <h3>Qui som?</h3>
-        <p>La Casa del Gelat neix a Olot, el Juliol del 2021, amb la idea de crear una petita gelateria 
-          artesana, on els gelats siguin el producte principal de la carta durant tot l’any. A l’estiu, majoritàriament 
-          servits amb terrines i cons i, a l’hivern, combinats amb productes calents com crepes, xocolata desfeta, etc. 
-          Tots els productes que s’ofereixen estan pensats tant per emportar com per prendre aquí: es compta amb una barra 
-          degustació a dins i fora del local i amb una terrassa per si es prefereix sentir l’ambient del Firal de més a prop, 
+        <p>La Casa del Gelat neix a Olot, el Juliol del 2021, amb la idea de crear una petita gelateria
+          artesana, on els gelats siguin el producte principal de la carta durant tot l’any. A l’estiu, majoritàriament
+          servits amb terrines i cons i, a l’hivern, combinats amb productes calents com crepes, xocolata desfeta, etc.
+          Tots els productes que s’ofereixen estan pensats tant per emportar com per prendre aquí: es compta amb una
+          barra
+          degustació a dins i fora del local i amb una terrassa per si es prefereix sentir l’ambient del Firal de més a
+          prop,
           envoltats dels clàssics plataners d’Olot.</p>
-          <a href="#" class="bg-primary p-2 text-light">Més informació</a>
-        </div>
+        <a href="#" class="bg-primary p-2 text-light">Més informació</a>
+      </div>
     </div>
-    </div>
-    
-    
-    <footer>
-        <div class="row bg-dark text-white lg-h1" id="footer-div">
-        <div class="col-4">
-            <p class="ml-3"> Compra Aquí!</p>
+  </div>
+
+  <div class="text-center">
+    <h3>Què oferim?</h3>
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <div class="card" style="width: 18rem;">
+          <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Gelateria Artesana</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Més informació</a>
+          </div>
         </div>
-        <div class="col-4 text-center">La Casa del Gelat</div>
-        <div class="col-4">
-            <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+      </div>
+      <div class="col-3">
+        <div class="card" style="width: 18rem;">
+          <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Venta Local i Takeaway</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Més informació</a>
+          </div>
         </div>
+      </div>
+      <div class="col-3">
+        <div class="card" style="width: 18rem;">
+          <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Foodtruck</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Més informació</a>
+          </div>
+        </div>
+      </div>
     </div>
-    </footer>
-    <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
-    </body>
+  </div>
+
+  <hr class="mx-5">
+
+  <div class="row">
+    <div class="col-6">
+      <div>
+        <h3 class="mt-5 text-center">Ressenyes i comentaris:</h3>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="m-5">
+      <h6><strong>Maria Juvany</strong></h6>
+      <p>Em va encantar la gelateria, repetiria!</p>
+      <img src="assets/images/5-stars.png" alt="5 stars" height="50px">
+      </div>
+      <div class="m-5">
+        <h6><strong>Joan Balaguer</strong></h6>
+        <p>Em va encantar la gelateria, repetiria!</p>
+        <img src="assets/images/5-stars.png" alt="5 stars" height="50px">
+        </div>
+        <div class="m-5">
+          <h6><strong>Laia Muntanyà</strong></h6>
+          <p>Em va encantar la gelateria, repetiria!</p>
+          <img src="assets/images/5-stars.png" alt="5 stars" height="50px">
+          </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="row bg-dark text-white lg-h1" id="footer-div">
+      <div class="col-4">
+        <p class="ml-3"> Compra Aquí!</p>
+      </div>
+      <div class="col-4 text-center">La Casa del Gelat</div>
+      <div class="col-4">
+        <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i
+              class="fa-brands fa-instagram"></i></a></div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
+</body>
