Add home page responsiveness

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   </div>
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-12 d-none col-sm-6 d-sm-block">
       <img id="qui-som-img" src="assets/images/qui-som-img.png" alt="" class="m-5">
     </div>
-    <div class="col-6">
+    <div class="col-12 col-sm-6">
       <div class="m-5">
         <h3>Qui som?</h3>
         <p>La Casa del Gelat neix a Olot, el Juliol del 2021, amb la idea de crear una petita gelateria
@@ -78,7 +78,7 @@
   <div class="text-center">
     <h3>Què oferim?</h3>
     <div class="row justify-content-center">
-      <div class="col-3">
+      <div class="col-12 col-sm-3 d-flex justify-content-center my-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-3 d-flex justify-content-center my-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-3 d-flex justify-content-center my-3">
         <div class="card" style="width: 18rem;">
           <img src="/assets/images/all-ice-creams.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -117,12 +117,12 @@
   <hr class="mx-5">
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-12 sm-col-6">
       <div>
         <h3 class="mt-5 text-center">Ressenyes i comentaris:</h3>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-12 sm-col-6">
       <div class="m-5">
       <h6><strong>Maria Juvany</strong></h6>
       <p>Em va encantar la gelateria, repetiria!</p>
@@ -142,13 +142,13 @@
   </div>
 
   <footer>
-    <div class="row bg-dark text-white lg-h1" id="footer-div">
+    <div class="row bg-dark text-white lg-h1 sm-justify-content-center" id="footer-div">
       <div class="col-4">
-        <p class="ml-3"> Compra Aquí!</p>
+        <p class=""> Compra Aquí!</p>
       </div>
       <div class="col-4 text-center">La Casa del Gelat</div>
       <div class="col-4">
-        <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i
+        <div class="col-4">Instagram: <a href="https://instagram.com" target="_blank"><i
               class="fa-brands fa-instagram"></i></a></div>
       </div>
     </div>
