Fix heading top padding

--- a/index.html
+++ b/index.html
@@ -142,14 +142,13 @@
   </div>
 
   <footer>
-    <div class="row bg-dark text-white lg-h1 sm-justify-content-center" id="footer-div">
+    <div class="row bg-dark text-white d-flex justify-content-between" id="footer-div">
       <div class="col-4">
-        <p class=""> Compra Aquí!</p>
+        <p class="ml-3"> Compra Aquí!</p>
       </div>
-      <div class="col-4 text-center">La Casa del Gelat</div>
+      <div class="col-4">La Casa del Gelat</div>
       <div class="col-4">
-        <div class="col-4">Instagram: <a href="https://instagram.com" target="_blank"><i
-              class="fa-brands fa-instagram"></i></a></div>
+        <div><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram float-right mr-3"></i></a></div>
       </div>
     </div>
   </footer>
